--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ControlNet-XS</title>
 <!-- <link href="style.css" rel="stylesheet"> -->
-<link href="https://dl.dropbox.com/scl/fi/rmg3z1plr087ui71fumgc/style.css?rlkey=ath0d4h9ihd3mkzurswmnkdgd" rel="stylesheet" >
+<link href="./ControlNet-XS_files/style.css" rel="stylesheet" >
 </head>
 
 <body>
@@ -14,9 +14,9 @@
   <span style="font-size: 24px">Computer Vision Lab, Heidelberg University
   </span></p>
   <br>
-  <img src="https://www.dropbox.com/scl/fi/wclx3c0x96i41diiujijy/FrontPlatzhalter.png?rlkey=kp36uxm7e65ywhwamvg6bn7o4&raw=1" class="teaser-gif" style="width:100%;"><br>
-  <!-- <img src="./example_images/gif_20.gif" class="teaser-gif" style="width:100%;"><br>
-  <img src="./example_images/gif_10.gif" class="teaser-gif" style="width:100%;"><br> -->
+  
+  <img src="./ControlNet-XS_files/teaser.gif" class="teaser-gif" style="width:100%;"><br>
+
   <h3 style="text-align:center"><em></em></h3>
     <font size="+2">
           <p style="text-align: center;">
@@ -25,6 +25,10 @@
             <a href="https://HuggingFace.com/CVL/ControlNet-XS" target="_blank">[Pretrained Models] (Coming Soon)</a> &nbsp;&nbsp;&nbsp;&nbsp;
           </p>
     </font>
+</div>
+
+<div class="content">
+  <img src="./ControlNet-XS_files/banner_image.png" class="summary-img"  style="width:100%;"><br>
 </div>
 
 <div class="content">
@@ -54,22 +58,15 @@ respectively. A row shows three example results of Model B, each with a differen
 
   </p>
   <br>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/0swocdaedzsrj7ee28yvn/sdxl_midas.png?rlkey=sh1ewm54hp59qkm58rfjp40xn&raw=1" style="width:100%;"> <br>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/dn306njffnaw9y6io6avl/sdxl_canny.png?rlkey=cqwqbfsj6kax3rijjz4tmv12l&raw=1" style="width:100%;"> <br>
-  <!-- <p>In certain cases, larger control modules can run into additional troubles and introduce structural artifacts by enforcing the guidance into the generation while 
-    in an overly amplified way as seen with the depth map structured hair. When present, such artefacts do not depend on the scale of the control signal and only disappear 
-    at the cost of lost overall control.
-  </p> -->
+  <img class="summary-img" src="./ControlNet-XS_files/sdxl_midas.jpg" style="width:100%;"> <br>
+  <img class="summary-img" src="./ControlNet-XS_files/sdxl_canny.jpg" style="width:100%;"> <br>
 </div>
 
 
 <div class="content">
   <h2>StableDiffusion Control</h2>
   <p>
-    <!-- We show generations of three modified ControlNet-XS sizes with 491M, 55M and 14M
-  parameters controlling Stable Diffusion with depth maps (Midas [René Ranftl et al., 2020]) and Canny
-  edges. Even the smallest model with 1.6% of the base model size, which has 865M
-  paramaters, is able to reliably guide the generation process faithfully. -->
+
   We show generations of three versions of ControlNet-XS with 491M, 55M and 14M parameters respectively.
    We control Stable Diffusion with depth maps (Midas [René Ranftl et al., 2020]) and Canny edges.
   Even the smallest model with 1.6% of the base model size, which has 865M parameters, is able to
@@ -81,8 +78,8 @@ respectively. A row shows three example results of Model B, each with a differen
 
   <br>
   <p></p>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/tlpx3o6hf8rmxwlpr53eq/sd_midas.png?rlkey=cf3dyij5v482cxgv4ipomn5y2&raw=1" style="width:100%;"> <br>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/u9pyycexils1toemu51xo/sd_canny.png?rlkey=cxuu7ej3sotlnukz6dlwaswuo&raw=1" style="width:100%;"> <br>
+  <img class="summary-img" src="./ControlNet-XS_files/sdxl_midas.jpg" style="width:100%;"> <br>
+  <img class="summary-img" src="./ControlNet-XS_files/sd_canny.png" style="width:100%;"> <br>
 </div>
 
 <div class="content">
@@ -97,15 +94,15 @@ significant reduction in quality of the generated image:
   </p> 
     <ul type="i">
       <li>
-        The final output image of stable diffusion, we call the base model, is generated iteratively in a series of time steps.
-         At each time step a U-Net, with an encoder and decoder, is executed as illustrated below.
-          At each iteration, the input to the base model and the control model is the generated image
-           of the previous time step, and the control image for the control model. The problem is that
-            in the encoder phase, both models operate independently, and the feedback from the control model
-             enters only in the decode phase of the base model. The result is a delayed correction/controlling mechanism, 
-             and it implies that the ControlNet has to do two jobs. Instead of solely focusing all network 
-             capacity on correction/controlling, ControlNet has to additionally anticipate in advance,
-              what “mistakes” the Encoder of the base model is going to make.
+        The final output image of stable diffusion, which we call the base model, is generated iteratively in a series of time steps.
+        At each time step a U-Net, with an encoder and decoder, is executed as illustrated below.
+        At each iteration, the input to the base model and the control model is the generated image
+        of the previous time step. The control model additionally receives a control image. The problem is that
+        in the encoder phase, both models operate independently, and the feedback from the control model
+        enters only in the decode phase of the base model. The result is a delayed correction/controlling mechanism, 
+        and it implies that the ControlNet has to do two jobs. Instead of solely focusing all network 
+        capacity on correction/controlling, ControlNet has to additionally anticipate in advance,
+        what “mistakes” the Encoder of the base model is going to make.
       </li>
       <li>
         By implying that image generation and controlling require similar model capacities, it is natural to initialize
@@ -122,7 +119,7 @@ significant reduction in quality of the generated image:
     mirrored, decoding architecture in the ControlNet setup (C).
   </p>
   <br>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/pyjlemoovdatdf6epzgfe/method.png?rlkey=v7r8j81pm524eh5ozybaejmzd&raw=1" style="width:100%;"> <br>
+  <img class="summary-img" src="./ControlNet-XS_files/method.png" style="width:100%;"> <br>
 </div>
 
 
@@ -137,14 +134,14 @@ significant reduction in quality of the generated image:
     parameters of the original ControlNet.
   </p>
 
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/a380tp9d2gc3h2qjoq3zu/fid_versions.png?rlkey=nsusol00a3wrkgeqbcnuck3lr&raw=1" style="width:60%;">
+  <img class="summary-img" src="./ControlNet-XS_files/fid_versions.png" style="width:60%;">
 
   <p>
     
     We focus our attention on variant B and train it with three different model sizes for canny and depth map
     guidance, respectively, and for StableDiffusion 2.1 and the current StableDIffusion-XL version.    
   </p>
-  <img class="summary-img" src="https://www.dropbox.com/scl/fi/sftsijiwvq3qnd014guox/fid_comparison.png?rlkey=kbcxt2cj0z19pe4rnhxb7ujfd&raw=1" style="width:55%;">
+  <img class="summary-img" src="./ControlNet-XS_files/fid_comparison.png" style="width:55%;">
 </div>
 
 <div class="content">
