--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <font size="+2">
           <p style="text-align: center;">
             <a target="_blank">[Paper] (Coming Soon)</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank">[GitHub Code] (Coming Soon)</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank">[Pretrained Models] (Coming Soon)</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://github.com/vislearn/ControlNet-XS" target="_blank">[GitHub Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://huggingface.co/CVL-Heidelberg/ControlNet-XS" target="_blank">[Pretrained Models]</a> &nbsp;&nbsp;&nbsp;&nbsp;
           </p>
     </font>
 </div>
