--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1><strong>ControlNet-XS </strong></h1>
   <p id="authors">Denis Zavadski <a href="https://hci.iwr.uni-heidelberg.de/vislearn/people/carsten-rother/">Carsten Rother</a><br>
     <br>
-  <span style="font-size: 24px">Computer Vision Lab, Heidelberg University
+  <span style="font-size: 24px">Computer Vision and Learning Lab, IWR, Heidelberg University
   </span></p>
   <br>
   
