--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <body>
 <div class="content">
-  <h1><strong>ControlNet-XS </strong></h1>
-  <p id="authors">Denis Zavadski <a href="https://hci.iwr.uni-heidelberg.de/vislearn/people/carsten-rother/">Carsten Rother</a><br>
+  <h1><strong>ControlNet-XS: Rethinking the Control of Text-to-Image Diffusion Models as Feedback-Control Systems</strong></h1>
+  <h2 style="text-align: center;"><strong>ECCV 2024 (Oral)</strong></h2>
+  <p id="authors">Denis Zavadski, Johann-Friedrich Feiden, <a href="https://hci.iwr.uni-heidelberg.de/vislearn/people/carsten-rother/">Carsten Rother</a><br>
     <br>
   <span style="font-size: 24px">Computer Vision and Learning Lab, IWR, Heidelberg University
   </span></p>
@@ -147,12 +148,15 @@ significant reduction in quality of the generated image:
 <div class="content">
   <h2>BibTex</h2>
   <code>
-  @article{zavadski2023controlnetxs,<br>
-    &nbsp;&nbsp;title={ControlNet-XS: Designing an Efficient and Effective Architecture for Controlling Text-to-Image Diffusion Models}, <br>
-    &nbsp;&nbsp;author={Denis Zavadski, Johann-Friedrich Feiden and Carsten Rother},<br>
-    &nbsp;&nbsp;year={2023},<br>
-    &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2312.06573}<br>
-}</code>
+  @misc{zavadski2024controlnetxs,<br>
+    &nbsp;&nbsp;title={ControlNet-XS: Rethinking the Control of Text-to-Image Diffusion Models as Feedback-Control Systems}, <br>
+    &nbsp;&nbsp;author={Denis Zavadski and Johann-Friedrich Feiden and Carsten Rother},<br>
+    &nbsp;&nbsp;year={2024},<br>
+    &nbsp;&nbsp;eprint={2312.06573},<br>
+    &nbsp;&nbsp;archivePrefix={arXiv},<br>
+    &nbsp;&nbsp;primaryClass={cs.CV},<br>
+}
+</code>
 </div>
 
 <div class="content">
