--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>ControlNet-XS</title>
+<title>ControlNet-XS: Rethinking the Control of Text-to-Image Diffusion Models as Feedback-Control Systems</title>
 <!-- <link href="style.css" rel="stylesheet"> -->
 <link href="./ControlNet-XS_files/style.css" rel="stylesheet" >
 </head>
@@ -150,11 +150,10 @@ significant reduction in quality of the generated image:
   <code>
   @misc{zavadski2024controlnetxs,<br>
     &nbsp;&nbsp;title={ControlNet-XS: Rethinking the Control of Text-to-Image Diffusion Models as Feedback-Control Systems}, <br>
-    &nbsp;&nbsp;author={Denis Zavadski and Johann-Friedrich Feiden and Carsten Rother},<br>
+    &nbsp;&nbsp;author={Zavadski, Denis and Feiden, Johann-Friedrich and Rother, Carsten},<br>
+    &nbsp;&nbsp;booktitle={European Conference on Computer Vision},<br>
+    &nbsp;&nbsp;pages={343--362},<br>
     &nbsp;&nbsp;year={2024},<br>
-    &nbsp;&nbsp;eprint={2312.06573},<br>
-    &nbsp;&nbsp;archivePrefix={arXiv},<br>
-    &nbsp;&nbsp;primaryClass={cs.CV},<br>
 }
 </code>
 </div>
