--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ significant reduction in quality of the generated image:
 <div class="content">
   <h2>BibTex</h2>
   <code>
-  @misc{zavadski2024controlnetxs,<br>
+  @inproceedings{zavadski2024controlnet,<br>
     &nbsp;&nbsp;title={ControlNet-XS: Rethinking the Control of Text-to-Image Diffusion Models as Feedback-Control Systems}, <br>
     &nbsp;&nbsp;author={Zavadski, Denis and Feiden, Johann-Friedrich and Rother, Carsten},<br>
     &nbsp;&nbsp;booktitle={European Conference on Computer Vision},<br>
